Make changes in the About Section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 
 <head>
-	<title>Cloud with Haseeb App | Home :: Crazy Amigos</title>
+	<title>Cloud with Haseeb | Home :: Crazy Amigos</title>
 	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="js/jquery.min.js"></script>
@@ -118,10 +118,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div id="about" class="about">
 		<div class="container">
 			<div class="gallery-head text-center">
-				<h3>ABOUT</h3>
-				<p>Yeng is the next generation mobile app which leverages bleeding edge technology to better enhance your alma mater experience
-					through participation from fellow students, faculties and the general public. Experience and streamline your University
-					life like never before using Yeng.</p>
+				<h3>ABOUT Haseeb</h3>
+				<p>Hey there! I'm a DevOps enthusiast passionate about automation, optimization, and innovation. I bridge the gap between dev and ops, ensuring fast, smooth, and reliable software delivery.Let’s build the future of cloud! 🚀</p>
 			</div>
 			<div class="row text-center about-wrapper">
 				<div class="col-md-4 about_grid about_tile">
