--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<div class="gallery-head text-center">
 				<h3>ABOUT Haseeb</h3>
-				<p>Hey there! I'm a DevOps enthusiast passionate about automation, optimization, and innovation. I bridge the gap between dev and ops, ensuring fast, smooth, and reliable software delivery.Let’s build the future of cloud! 🚀</p>
+				<p>Hey there! I'm a DevOps enthusiast passionate about automation, optimization, and innovation. I bridge the gap between dev and ops, ensuring fast, smooth, and reliable software delivery.Lets build the future of cloud!</p>
 			</div>
 			<div class="row text-center about-wrapper">
 				<div class="col-md-4 about_grid about_tile">
@@ -284,7 +284,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<h4>"Finding Empty Space"</h4>
 					</div>
 					<div class="ca-content">
-						<p>Yeng is the brainchild of Crazy Amigos, a team of tech professionals, students and aficionados with the mission to
+						<p>H5EB is the brainchild of Crazy Amigos, a team of tech professionals, students and aficionados with the mission to
 							make the world a better place by driving the youth to excellence. Be part of Crazy Amigos to get motivated by our
 							amigos and explore open source in all it's beauty...</p>
 					</div>
@@ -517,7 +517,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="about_grid team-tile">
 						<div class="teams-h">
 							<h3>
-								<strong>Project Coordinators</strong>
+								<strong>Cloud Engineer</strong>
 							</h3>
 						</div>
 						<div>
@@ -531,7 +531,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="about_grid team-tile">
 						<div class="teams-h">
 							<h3>
-								<strong>Testing</strong>
+								<strong>Devops Engineer</strong>
 							</h3>
 						</div>
 						<div>
@@ -582,15 +582,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class=" Downloads">
 				<div class=" download_left">
 					<h3>DOWNLOAD</h3>
-					<p>Get Yeng app in your android mobile by clicking the link below (iOS app coming soon)</p>
+					<p>Get H5EB app in your android mobile by clicking the link below (iOS app coming soon)</p>
 					<a class="Down-btn" href="#">DOWNLOAD</a>
 				</div>
 				<div class="download_right">
 					<h3>Open Source</h3>
-					<p> Do you feel like there is something more that YOU could contribute to Yeng? Yeng App is fully Open Source! feel free to
-						source your talent to Yeng App through our GitHub repo. You can also raise your valuble suggestions and queries about Yeng
+					<p> Do you feel like there is something more that YOU could contribute to H5EB? H53B App is fully Open Source! feel free to
+						source your talent to H5EB App through our GitHub repo. You can also raise your valuble suggestions and queries about H53B
 						App in GitHub and we WILL for sure check them out!</p>
-					<a class="Down-btn" href="https://github.com/Crazy-Amigos/Yeng" target="_blank">Get Source</a>
+					<a class="Down-btn" href="https://github.com/Cloud-With-Haseeb/actions" target="_blank">Get Source</a>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -634,7 +634,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="footer">
 		<div class="container">
 			<div class="copy-right">
-				<p> &copy; 2020 Ping Foundation</p>
+				<p> &copy; 2025 Cloud-With-Haseeb Foundation</p>
 			</div>
 		</div>
 	</div>
